# mprpc

./: README.md
mprpc/: CMakeLists.txt
mprpc/examples/: friends.pb.cc  friends.pb.h  friends.proto  user.proto
mprpc/examples/callee/: CMakeLists.txt  friendservice.cc  userservice.cc
mprpc/examples/caller/: CMakeLists.txt  callfriendservice.cpp  calluserservice.cpp
mprpc/src/: CMakeLists.txt  logger.cpp  mprpcapplication.cpp  mprpcchannel.cpp  mprpcconfig.cpp  mprpccontroller.cpp  rpcheader.proto  rpcprovider.cpp  zookeeperutil.cpp
mprpc/src/include/: logger.hpp  logqueue.hpp  mprcpcontroller.hpp  mprpcapplication.hpp  mprpcchannel.hpp  mprpcconfig.hpp  rpcheader.pb.h  rpcprovider.hpp  zookeeperutil.hpp
